JSW Devsb/src/objects/Monthly_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Achievement__c</fullName>
        <formula>( Monthly_Target__c -  Today_Sale__c )  / Monthly_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achievement %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_NT_ND__c</fullName>
        <label>Dealer(NT/ND)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <formula>IF( ISBLANK( Dealer__c ) ,  Dealer_NT_ND__c , Dealer__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monthly Targets</relationshipLabel>
        <relationshipName>Monthly_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Monthly_Dealer_Target__r.Districts__r.Name</formula>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month_Actual__c</fullName>
        <label>Last Month Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Year_Same_Month_Actual__c</fullName>
        <label>Last Year Same Month Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Name__c</fullName>
        <formula>CASE( MONTH( Monthly_Dealer_Target__r.Target_Date__c )  , 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH( Monthly_Dealer_Target__r.Target_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Actaul__c</fullName>
        <label>Monthly Actaul</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Dealer_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Dealer Target</label>
        <referenceTo>Monthly_Dealer_Target__c</referenceTo>
        <relationshipLabel>Monthly Targets</relationshipLabel>
        <relationshipName>Monthly_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Target_MTD__c</fullName>
        <formula>DAY(TODAY()) * (Monthly_Target__c  / (IF(MONTH(TODAY())=12 , 31 ,
DAY(DATE(YEAR(TODAY()),MONTH(TODAY()) + 1, 1) - 1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Target MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Target__c</fullName>
        <label>Monthly Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF( ISBLANK( Dealer__c ) ,  Dealer_NT_ND__c , Dealer__r.Name) + &apos; &apos; + CASE( MONTH( Monthly_Dealer_Target__r.Target_Date__c )  , 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &apos; &apos; + &apos;Target&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account_Monthly_Target__c</fullName>
        <label>New Account Monthly Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_short__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Monthly_Dealer_Target__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetDateTime__c</fullName>
        <label>TargetDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>Monthly_Dealer_Target__r.Territorys__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Sale__c</fullName>
        <label>Today Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>( Monthly_Target__c  -  Last_Year_Same_Month_Actual__c ) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( Monthly_Dealer_Target__r.Target_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Dealer_Target__c</fullName>
        <label>Yearly Dealer Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Targets</label>
    <listViews>
        <fullName>Ravi_October_Targets</fullName>
        <columns>Dealer__c</columns>
        <columns>Monthly_Target__c</columns>
        <columns>Monthly_Actaul__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Ravi</value>
        </filters>
        <label>Ravi October Targets</label>
    </listViews>
    <nameField>
        <label>Monthly Targets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>